# circuit

./: Cargo.toml  Dockerfile  Dockerfile.prover  README.md
aggregator-program/: Cargo.toml
aggregator-program/src/: main.rs
lib/: Cargo.toml
lib/src/: lib.rs
program/: Cargo.toml
program/src/: main.rs
script/: Cargo.toml  build.rs
script/fixtures/: sample_ohlc.json  sample_trades.json
