[workspace]
members = ["lib"]
resolver = "2"

[workspace.dependencies]
sha2 = { version = "0.10", default-features = false }
sha3 = { version = "0.10", default-features = false }
serde = { version = "=1.0.216", features = ["derive"] }
borsh = { version = "1", default-features = false }

[patch.crates-io]
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.10.8-sp1-6.0.0" }
