[package]
name = "carnot-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = { workspace = true }
sha3 = { workspace = true }
borsh = { workspace = true, optional = true }
serde = { workspace = true, optional = true }

[features]
default = []
std = ["serde/std", "borsh/std"]
serde = ["dep:serde"]

[dev-dependencies]
serde_json = "1"
